--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">polygons</string>
     <string name="title_activity_maps">Map</string>
     <string name="mapsMarkerText">Enter some text for the Marker</string>
+    <string name="button">Start Polygon</string>
 </resources>
